<resources>
    <string name="app_name">Personal Account Manager</string>
    <string name="navigation_menu_home">Home</string>
    <string name="navigation_menu_transaction">Transaction</string>
    <string name="navigation_menu_report">Report</string>
    <string name="navigation_menu_spend">Spending</string>
    <string name="navigation_menu_earn">Earning</string>
    <string name="item_category">Category</string>
    <string name="item_amount">Amount</string>
    <string name="item_note">Note</string>
    <string name="item_date">Date</string>
    <string name="item_repeat_status">isRepeat</string>
    <string name="item_repeat_key">RepeatKey</string>


    <string-array name="ALERT_PERCENTAGE">
        <item>50%</item>
        <item>40%</item>
        <item>30%</item>
        <item>20%</item>
        <item>15%</item>
        <item>10%</item>
        <item>5%</item>
    </string-array>

    <string-array name="SCATEGORY">
        <item>Food</item>
        <item>Clothing</item>
        <item>Home</item>
        <item>Education</item>
        <item>Health &amp; Fitness</item>
        <item>Family &amp; Personal</item>
        <item>Drinks</item>
        <item>Sports</item>
        <item>Travel</item>
        <item>Bills</item>
        <item>Car</item>
        <item>Entertainment</item>
        <item>Shopping</item>
        <item>Accommodation</item>
        <item>Utility</item>
        <item>Transport</item>
        <item>Groceries</item>
        <item>Hobbies</item>
        <item>Pets</item>
        <item>Cinema</item>
        <item>Love</item>
        <item>Kids</item>
        <item>Rent</item>
        <item>Gift</item>
        <item>Savings</item>
        <item>Other</item>
    </string-array>

    <string-array name="ECATEGORY">
        <item>Salary</item>
        <item>Business</item>
        <item>Gifts</item>
        <item>Loan</item>
        <item>Extra Income</item>
    </string-array>

</resources>
