<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/green"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:id="@+id/backButton"
            android:layout_alignParentLeft="true"
            android:background="@drawable/ic_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Schedule"
            android:layout_centerVertical="true"
            android:textSize="23dp"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/ic_delete"
            android:id="@+id/deleteSchedule"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:background="@drawable/ic_edit"
            android:id="@+id/editSchedule"
            android:layout_toLeftOf="@id/deleteSchedule"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:scrollbars="vertical"
        android:layout_margin="5dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_margin="15dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="Table"
                        android:textColor="@color/black"
                        android:textSize="18dp"/>

                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tableSpinner"
                        android:layout_alignParentRight="true"/>
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_margin="15dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/item_category"
                        android:textColor="@color/black"
                        android:textSize="18sp"/>

                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/categorySpinner"
                        android:layout_alignParentRight="true"/>
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_margin="15dp"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/item_amount"
                        android:textColor="@color/black"
                        android:textSize="18sp"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_marginLeft="15dp"
                        android:ellipsize="end"
                        android:hint="Type amount here"
                        android:gravity="right"
                        android:inputType="numberDecimal"
                        android:layout_height="wrap_content"
                        android:id="@+id/amountEdit"
                        android:layout_alignParentRight="true"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_margin="15dp"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/item_note"
                        android:textColor="@color/black"
                        android:textSize="18sp"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_marginLeft="40dp"
                        android:id="@+id/noteEdit"
                        android:ellipsize="end"
                        android:inputType="text"
                        android:hint="Type note here"
                        android:gravity="right"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_margin="15dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/item_date"
                        android:textColor="@color/black"
                        android:textSize="18sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Today"
                        android:textColor="@color/blue"
                        android:textSize="18sp"
                        android:id="@+id/dateText"
                        android:layout_alignParentRight="true"/>
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_margin="15dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="Auto Repeat"
                        android:textColor="@color/black"
                        android:textSize="18sp"/>

                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/autoRepetitionSpinner"
                        android:layout_alignParentRight="true"/>
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:visibility="gone"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_margin="15dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="Activated"
                        android:textColor="@color/black"
                        android:textSize="18sp"/>

                    <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/isActiveSwitch"
                        android:layout_alignParentRight="true"/>
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:text="Update"
                android:gravity="center"
                android:id="@+id/updateButton"
                android:textSize="18sp"
                android:background="@color/green"
                android:textColor="@color/white"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>